--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
      <link rel="stylesheet" href="bootstrap.css">
      <link rel="stylesheet" href="style2.css">
-    
+   
     </head>
     <body>
         <section id="whatwedo" class="whatwedo sectioner clearfix">
@@ -20,8 +20,8 @@
             <div class="layout">
                 <i class="icon"></i>
                 <div class="txt">
-                    <h3><font color="#fff" size="5px">当前图书&nbsp;&nbsp;<a href="1.html">  
-                        <font color="#fff">查询</font></a></font></h3>
+                    <h3><font color="#fff" size="5px">当前图书&nbsp;&nbsp;<a href="2.html">  
+                   <font color="#fff" size="5px">查询</font></a></font></h3>
                 </div>
                 </div>
             </article>
@@ -30,7 +30,7 @@
             <div class="layout">
                 <i class="icon"></i>
                 <div class="txt">
-                    <h3><font color="#000" size="5px">当前图书&nbsp;&nbsp;<a href="1.html"><font color="#000">录入</font></a></font></h3>
+                    <h3><font color="#000" size="5px">当前图书&nbsp;&nbsp;<a href="3.html"><font color="#000">录入</font></a></font></h3>
                    
                 </div>
                 </div>
@@ -56,5 +56,30 @@
                 </div>
             </article>
         </section>
+        <div id="div1"> 
+            <textarea id="text" ></textarea><br>
+            <button onclick="sub()" id="submit">确认发布 </button>
+        </div>
+
+        <script>
+          window.onload = function(){
+               document.getElementById("text").style.visibility="hidden";
+               document.getElementById("submit").style.visibility="hidden";
+           }
+           function add(){
+               document.getElementById("text").style.visibility="visible";
+               document.getElementById("submit").style.visibility="visible";
+           }
+           function sub(){
+            var nP = document.createElement("p");
+            var oInput = document.getElementById("text");
+            nP.innerHTML = oInput.value;
+            oInput.value = "";
+            var parentDiv = document.getElementById("msg");
+            parentDiv.appendChild(nP);
+            parentDiv.scrollTop = 9999;
+            }
+
+        </script>
     </body>
 </html>
