对注册页面进行完善。删除了之前写的页面
输入正确格式的用户名、密码、邮箱方可注册

--- a/1.html
+++ b/1.html
@@ -138,8 +138,8 @@
     </head>
     <body>
         <section id="whatwedo" class="whatwedo sectioner clearfix">
-            <h1 class="sectionHeader">图书管理系统&nbsp;&nbsp;&nbsp;&nbsp;</h1><button class="btn1">登录</button>
-            <button class="btn2">注册</button>
+            <h1 class="sectionHeader">图书管理系统&nbsp;&nbsp;&nbsp;&nbsp;</h1><button class="btn1" onclick="javascrtpt:window.location.href='2.html'">登录</button>
+            <button class="btn2" onclick="javascrtpt:window.location.href='2.html'">注册</button>
             
             
             <article class="whatwedo-item front-end">
